--- a/butacas.css
+++ b/butacas.css
@@ -35,8 +35,12 @@
     height: 50px;
     width: 50px;
     left: 0;
-    position: absolute;
     top: 0;
+    position: absolute;
+    text-align: center;
+    font-weight: bold;
+    justify-content: center;
+    line-height: 39px;
 }
   
 .butaca input[type="checkbox"]:checked + label {
@@ -59,3 +63,11 @@
     border-radius: 5px;
 }
 
+.referencia span {
+    padding: 10px;
+}
+
+.referencia label {
+    height: 20px;
+    width: 20px;
+}
