--- a/butacas.css
+++ b/butacas.css
@@ -7,15 +7,17 @@
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
+    width: 900px;
 }
 
 .pantalla {
     border: 1px solid rgb(0, 0, 0);
     border-top-left-radius: 50%;
     border-top-right-radius: 50%;
-    margin: 100px;
+    margin-bottom: 50px;
+    /* margin: 100px;
     min-width: 500px;
-    min-height: 50px;
+    min-height: 50px; */
     background-color: lightblue;
     text-align: center;
     padding-top: 15px;
@@ -23,7 +25,7 @@
 
 .butaca {
     position: relative;
-    margin: 20px;
+    padding: 20px;
 }
   
 .butaca label {
@@ -65,6 +67,11 @@
     border-radius: 5px;
 }
 
+.referencia {
+    padding: 0px 20px;
+    margin-top: 10px;
+}
+
 .referencia span {
     padding: 10px;
 }
@@ -74,6 +81,14 @@
     width: 20px;
 }
 
+.seleccionada {
+    background-color: green !important;
+}
+
+.ocupada {
+    background-color: gray !important;
+}
+
 .referencia-butaca {
     float: right;
 }
@@ -81,3 +96,4 @@
 h1 {
     text-align: center;
 }
+
